[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Map/floors/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://rooms/room.gd" type="Script" id=3]
[ext_resource path="res://Map/reset_scene_transition.gd" type="Script" id=4]
[ext_resource path="res://Map/scene_transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/back_to_game.gd" type="Script" id=6]
[ext_resource path="res://rooms/waypoints/waypoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://rooms/mountains/bound_element.gd" type="Script" id=8]
[ext_resource path="res://rooms/mountains/bounds.gd" type="Script" id=9]

[node name="Node2D" type="Node2D"]
position = Vector2( 0.314972, 0.157486 )
script = ExtResource( 3 )

[node name="Piso" parent="." instance=ExtResource( 2 )]
position = Vector2( 60.4264, 148.755 )

[node name="Piso2" parent="." instance=ExtResource( 2 )]
position = Vector2( 107.978, 148.723 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 64.3467, 114.565 )

[node name="back_to_game" type="Node" parent="."]
script = ExtResource( 6 )

[node name="path1" parent="." instance=ExtResource( 5 )]
position = Vector2( 127.727, 126.143 )
script = ExtResource( 4 )

[node name="waypoint1" parent="path1" instance=ExtResource( 7 )]
position = Vector2( -32.0112, 7.33949 )
has_path_parent = false
point = Color( 1, 0, 0, 1 )

[node name="bounds" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.45098 )
script = ExtResource( 9 )
bound_color = Color( 0.0470588, 0.788235, 0.862745, 1 )

[node name="bound_x" type="Node2D" parent="bounds"]
position = Vector2( 0.463074, -186.704 )
script = ExtResource( 8 )

[node name="bound_y" type="Node2D" parent="bounds"]
position = Vector2( 126.251, 28.9317 )
script = ExtResource( 8 )

[node name="bound_width" type="Node2D" parent="bounds"]
position = Vector2( 724.989, 3.43764 )
script = ExtResource( 8 )

[node name="bound_height" type="Node2D" parent="bounds"]
position = Vector2( 116.049, 238.456 )
script = ExtResource( 8 )

[connection signal="body_entered" from="path1" to="path1" method="_on_path1_body_entered"]
